# overseerr-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
src/overseerr_mcp_server/: __init__.py  overseerr.py  server.py  tools.py
